apps/doppler/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: doppler-operator-system
  labels:
    app.kubernetes.io/name: doppler-operator
    app.kubernetes.io/part-of: homelab
